[project]
name = "georgetown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
george = "georgetown.main:main"
